# c-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
.github/workflows/: frontend-build-test.yml
src/: CMakeLists.txt  ast.h  codegen  codegen.cpp  wrapper.cpp
src/backend/: CMakeLists.txt  backend.h  llvm_ast.cpp  readme.md
src/backend/include/: llvm_ast.h  llvm_utils.h  tree_gen.h  type_utils.h
src/backend/include/ast/: array.h  base.h  compound.h  control_flow.h  function.h  literal.h  null.h  operator.h  translationUnit.h  variable.h  varref.h
src/backend/src/: backend.cpp  export.cpp  llvm_ast.cpp  llvm_utils.cpp  tree_gen.cpp  type_utils.cpp
src/backend/src/ast/: array.cpp  compound.cpp  control_flow.cpp  function.cpp  literal.cpp  null.cpp  operator.cpp  translationUnit.cpp  variable.cpp  varref.cpp
src/backend/tmp/: ast.h  codegen.cpp
src/compatible-header/: README.md  arg.h  array_case.h  assert.h  builtin.h  cond_test.h  math.h  qsort.h
src/frontend/: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  case-test.sh  clean.sh  config.h  configure  configure.ac  frontend.h  run-script.sh  ylwrap
src/frontend/include/: _config.h  ast.h  ast_impl.h  builtin.h  config.h  config.h.in  exception.h  preprocessor.h  semantic.h  symtab_impl.h  term_color.h
src/frontend/src/: ast_impl.c  builtin.cpp  cmdline.cpp  entry.cpp  export.cpp  lib_zjucc.cpp  parser.y  preprocessor.cpp  semantic.cpp  tokenizer.l
src/frontend/test/: .test.c.swp  builtin_functions.c  function.c  function.pp.c  loop.c  t.c  t.pp.c  test_ast.c
src/frontend/third_parties/simplecpp/: simplecpp.cpp  simplecpp.h
src/frontend/third_parties/tinyexpr/: tinyexpr.c
src/visualization/: deploy.sh
src/visualization/backend/: .gitignore  bootstrap.sh  build.sh  go.mod  go.sum  main.go
src/visualization/frontend/: README.md  package.json
src/visualization/frontend/config/: webpack.config.js
src/visualization/frontend/patches/: ansi-to-html+0.7.2.patch
src/visualization/frontend/public/: index.html
src/visualization/frontend/scripts/: test.js
src/visualization/frontend/src/: App.css  App.js  services.js
src/visualization/frontend/src/components/: AntVGraphin.js  Footer.js
src/visualization/frontend/src/etc/: ExampleCode.js  settings.json
src/visualization/frontend/src/util/: Logger.js
src/visualization/serialization/: .gitignore  README.md  clean.sh  compile.sh  serializer.cpp
src/visualization/serialization/include/: frontend.h
test/: loop.c  test-link.cpp  test.c  test_function.c
